代码同步。全局权限校验已完成。

--- a/TEG.SSO.WebAPI/appsettings.json
+++ b/TEG.SSO.WebAPI/appsettings.json
@@ -1,4 +1,4 @@
-{
+ï»¿{
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
@@ -9,13 +9,18 @@
     "Configuration": "127.0.0.1:6379"
   },
   "AppSetting": {
-    "TokenOverTime": 100, //token¹ıÆÚÊ±¼ä£¬µ¥Î»£º·ÖÖÓ
-    "VerificationCodeValidTime": 10, //ÉèÖÃÓÊÏäÑéÖ¤ÂëµÄÓĞĞ§ÆÚ£¬µ¥Î»Îª·ÖÖÓ
+    "TokenOverTime": 100, //tokenè¿‡æœŸæ—¶é—´ï¼Œå•ä½ï¼šåˆ†é’Ÿ
+    "VerificationCodeValidTime": 10, //è®¾ç½®é‚®ç®±éªŒè¯ç çš„æœ‰æ•ˆæœŸï¼Œå•ä½ä¸ºåˆ†é’Ÿ
+    "CacheTime": 10,//æƒé™éªŒè¯æ•°æ®redisç¼“å­˜æ—¶é—´ï¼Œå•ä½ä¸ºåˆ†é’Ÿ
+    "AccountValidTime": {
+      "ValidTime": 90, //æ–°å¢è´¦å·æœ‰æ•ˆæœŸæ—¶é—´ï¼Œå•ä½ä¸ºå¤©
+      "MinValidTime": 30 //æœ€ä½æœ‰æ•ˆæ—¶é—´ï¼Œå¦‚æœè·ç¦»è´¦å·è¿‡æœŸå¤©æ•°ä½äºè¿™ä¸ªæ•°å€¼ï¼Œåˆ™è‡ªåŠ¨ç»­æœŸValidTimeå¤©
+    },
     "RetrievePasswordEmail": {
-      "EmailSubject_zh": "¡¾TEG¡¿°²È«ÑéÖ¤",
+      "EmailSubject_zh": "ã€TEGã€‘å®‰å…¨éªŒè¯",
       "EmailSubject_en": "[TEG]Authentication",
-      "ChangePassWordByCodeEmail_zh": "ÄúÕıÔÚÍ¨¹ıÓÊÏäÉêÇëĞŞ¸ÄÄúµÄÃÜÂë£¬¸´ÖÆ»òµã»÷ÏÂÃæµÄµØÖ·£º{Url}´ò¿ªĞŞ¸ÄÃÜÂëµÄÒ³Ãæ£¬¼´¿ÉÖØÖÃÃÜÂë",
-      "ChangePassWordByCodeEmail_en": "You are requesting to change your password by email, copy or click on the following address: {Url} Open the page for changing your password and you can reset your password"
+      "ChangePassWordByCodeEmail_zh": "æ‚¨æ­£åœ¨é€šè¿‡é‚®ç®±ç”³è¯·ä¿®æ”¹æ‚¨çš„å¯†ç ï¼Œå¤åˆ¶æˆ–ç‚¹å‡»ä¸‹é¢çš„åœ°å€ï¼š<br/>{Url}<br/>æ‰“å¼€ä¿®æ”¹å¯†ç çš„é¡µé¢ï¼Œå³å¯é‡ç½®å¯†ç ",
+      "ChangePassWordByCodeEmail_en": "You are requesting to change your password by email, copy or click on the following address: <br/>{Url}<br/> Open the page for changing your password and you can reset your password"
     }
   },
   "ConnectionStrings": {
