--- a/TEG.SSO.Service/TEG.SSO.Service.csproj
+++ b/TEG.SSO.Service/TEG.SSO.Service.csproj
@@ -15,6 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="AegisImplictMail">
+      <HintPath>..\DLLLibrary\AegisImplictMail.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.AspNetCore.Mvc.Abstractions">
       <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.mvc.abstractions\2.2.0\lib\netstandard2.0\Microsoft.AspNetCore.Mvc.Abstractions.dll</HintPath>
     </Reference>
