--- a/TEG.SSO.WebAPI/TEG.SSO.WebAPI.csproj
+++ b/TEG.SSO.WebAPI/TEG.SSO.WebAPI.csproj
@@ -24,6 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="AegisImplictMail">
+      <HintPath>..\DLLLibrary\AegisImplictMail.dll</HintPath>
+    </Reference>
     <Reference Include="TEG.Framework.Security">
       <HintPath>..\DLLLibrary\TEG.Framework.Security.dll</HintPath>
     </Reference>
@@ -32,6 +35,9 @@
     </Reference>
     <Reference Include="TEG.Framework.Standard.Utils">
       <HintPath>..\DLLLibrary\TEG.Framework.Standard.Utils.dll</HintPath>
+    </Reference>
+    <Reference Include="TEG.Framework.Utility">
+      <HintPath>..\DLLLibrary\TEG.Framework.Utility.dll</HintPath>
     </Reference>
   </ItemGroup>
 
